File exclusion -- Refactor ExecParam to use List<String> instead of  String[]
- adapt ExecParamTest to said change
- adapt InMemoryExecParamRepository to said change
- change default value for "exclude" option in default-execution-parameters.json
- adapt ApacheExecParamParser to handle multiple arguments for same option
  - adapt test to said change
- adapt JsonExecParamParser to handle multiple arguments for same option